Update styling, fix uneven column heights

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,8 @@
 
 body {
   padding-top: 70px;
+  display: block;
+  overflow: auto;
 }
 
 .panel-heading {
